Tables CSS: fix RTL content alignment issue
In RTL mode all the table content should be aligned to right. It's not. The content is aligned to left.

This PR should fix the bug by removing the hard-codded `text-align: left`.

--- a/assets/scss/reset/_table.scss
+++ b/assets/scss/reset/_table.scss
@@ -18,7 +18,6 @@ table {
 	td {
 		padding: 15px;
 		line-height: 1.5;
-		text-align: left;
 		vertical-align: top;
 		border: 1px solid $gray-light;
 	}
